--- a/blog-app-api/src/main/resources/application.properties
+++ b/blog-app-api/src/main/resources/application.properties
@@ -1,9 +1,10 @@
 server.port=9090
 
-spring.datasource.url=jdbc:mysql://localhost:3307/blog-app-api
+spring.datasource.url=jdbc:mysql://localhost:3306/blog-app-api
 spring.datasource.username=root
 spring.datasource.password=root
-spring.datasource.driver-class-name=com.mysql.cj.jdbc.driver
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL57Dialect
 spring.jpa.hibernate.ddl-auto=update
+spring.jpa.show-sql=true
